--- a/lapanthere_web_design_lyon_contact.html
+++ b/lapanthere_web_design_lyon_contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
-    <meta name="description" content="L'agence de web design La Panthère est à votre écoute, contactez-nous!">
+    <meta name="description" content="Prêt pour redonner vie à votre projet? Contactez notre équipe!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/webp" href="favicon.webp">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
