Changement des couleurs de faible contraste et mise en commentaire des balises META Keywords obsolètes

--- a/lapanthere_web_design_lyon_contact.html
+++ b/lapanthere_web_design_lyon_contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <!-- <meta name="keywords" content=""> -->
     <meta name="description" content="Prêt pour redonner vie à votre projet? Contactez notre équipe!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/webp" href="favicon.webp">
@@ -18,7 +18,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>Agence de web design La panthère à Lyon</title>
+    <title>Entreprise de web design La Panthère à Lyon</title>
 
     
 <!-- Analytics -->
