--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<blockquote>"L'agence La Panthère est une excellente agence web! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</blockquote>
-			<figcaption>Maxime Guibard, PDG de A vos fourchettes</figcaption>
+			<blockquote>Maxime Guibard, PDG de A vos fourchettes</blockquote>
 			</div>
 		</div>
 	</div>
