--- a/lapanthere_web_design_lyon_contact.html
+++ b/lapanthere_web_design_lyon_contact.html
@@ -13,10 +13,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
+	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/blocs.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
+	<script src="./js/jqBootstrapValidation.min.js"></script>
 	<script src="./js/formHandler.js"></script>
     <title>Entreprise de web design La Panthère à Lyon</title>
 
