correction aude aide

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <!-- <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design"> -->
-    <meta name="description" content="Venez visiter le site de La Panthère, la meilleure agence de web design de la région Lyonnaise!">
+    <meta name="description" content="Venez visiter le site de La Panthère, la meilleure entreprise de web design de la région Lyonnaise!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/webp" href="favicon.webp">
     
@@ -75,7 +75,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p>L'agence La Panthère est une agence de web design qui aude les entreprises à devenir attractives et visibles sur Internet.</p>
+				<p>L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
