Utilisation de CDN pour compression de bootstrap dans index

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <!-- <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design"> -->
     <meta name="description" content="Venez visiter le site de La Panthère, la meilleure entreprise de web design de la région Lyonnaise!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/webp" href="favicon.webp">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" href="<https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css>">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
@@ -255,7 +254,7 @@
 <!-- Principal conteneur END -->
     
 <script src="./js/jquery-2.1.0.js" ></script>
-<script src="./js/bootstrap.min.js" ></script>
+<script *src*="<https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js>"></script>
 <script src="./js/blocs.js" ></script>
 <script src="./js/jquery.touchSwipe.js" defer></script>
 <script src="./js/gmaps.min.js" ></script>
