--- a/lapanthere_web_design_lyon_index.html
+++ b/lapanthere_web_design_lyon_index.html
@@ -14,18 +14,27 @@
 
     <link
       rel="stylesheet"
-      href="<https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css>"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
     />
+    <!-- <link rel="stylesheet" type="text/css" href="bootstrap.min.css" /> -->
+
     <link rel="stylesheet" type="text/css" href="style.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
 
 
     <title>Entreprise de web design La Panthère à Lyon</title>
-
+  </head>
+  <body>
+    <!-- Principal conteneur -->
+<div class="page-container">
+    
+  <!-- bloc-0 -->
+  <div class="bloc bgc-white l-bloc " id="bloc-0">
+    <div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt=" La Panthère acceuil" height="40" /></a>
+				<a class="navbar-brand" href="lapanthere_web_design_lyon_index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="La Panthère acceuil" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -33,7 +42,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="lapanthere_web_design_lyon_index.html">Accueil</a>
 					</li>
 					<li>
 					</li>
@@ -43,8 +52,10 @@
 				</ul>
 			</div>
 		</nav>
-	</div>
-</div>
+    </div>
+  </div>
+ 
+
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
@@ -64,37 +75,6 @@
 	</div>
 </div>
 <!-- bloc-1-presentation END -->
-
-      <!-- bloc-1-presentation -->
-      <div
-        class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
-        id="bloc-1-hero"
-      >
-        <div class="container bloc-lg">
-          <div class="row tight-width-whitespace">
-            <div class="col-sm-12">
-              <img
-                src="img/logo.webp"
-                class="center-block image-resize-mode"
-                width="100"
-                alt="Agence La Panthère, agence web paris, création logo paris"
-              />
-              <h1 class="text-center hero-bloc-text tc-white">
-                Agence La Panthère
-              </h1>
-              <div class="text-center">
-                <a
-                  href="lapanthere_web_design_lyon_contact.html"
-                  class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-                  id="cta-hero"
-                  >Contact</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- bloc-1-presentation END -->
 
       <!-- bloc-2-services -->
       <div class="bloc bgc-white l-bloc" id="bloc-2-services">
@@ -163,6 +143,23 @@
       </div>
       <!-- bloc-2-services END -->
 
+      <!-- bloc-3-what-i-do -->
+<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+	<div class="container bloc-lg">
+		<div class="row tight-width-whitespace black-background">
+			<div class="col-sm-12">
+				<P class="mg-md text-center tc-white">
+					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+        </P>
+				<p class="text-center white">
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="lapanthere_web_design_lyon_contact.html">Contactez notre équipe</a><br>
+				</p>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- bloc-3-what-i-do END -->
+
 <!-- bloc-4-portfolio -->
 <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
@@ -215,108 +212,20 @@
 </div>
 <!-- bloc-4-portfolio END -->
 
-      <!-- bloc-4-portfolio -->
-      <div
-        class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc"
-        id="bloc-4-portfolio"
-      >
-        <div class="container bloc-lg">
-          <div class="row">
-            <div class="col-sm-12 text-center">
-              <p>
-                Nous travaillons avec beaucoup de clients, voici nos
-                réalisations.
-              </p>
-            </div>
-          </div>
-          <div class="row tight-width-whitespace portfolio-row">
-            <div class="col-sm-6">
-              <a
-                href="#"
-                data-lightbox="img/1.webp"
-                data-gallery-id="gallery-1"
-                data-caption="Refonte d'un site web pour un journal local"
-                data-frame="snapshot-lb"
-                ><img
-                  src="img/1.webp"
-                  alt="paris web design logo agence web meilleure agence et refonte site web journal"
-                  class="img-responsive portfolio-thumb"
-              /></a>
-              <h2 class="mg-md text-center">
-                Refonte d'un site web pour un journal local
-              </h2>
-              <p class="text-center">
-                Nous avons créé une nouvelle identité visuelle pour un journal
-                lyonnais.
-              </p>
-            </div>
-            <div class="col-sm-6">
-              <a
-                href="#"
-                data-lightbox="img/2.webp"
-                data-gallery-id="gallery-1"
-                data-caption="Création d'un site web pour photographes"
-                data-frame="snapshot-lb"
-                ><img
-                  src="img/2.webp"
-                  class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"
-              /></a>
-              <h2 class="mg-md text-center">
-                Création d'un site web pour photographes
-              </h2>
-              <p class="text-center">
-                Nous avons conçu la plateforme idéale pour laisser place aux
-                clichés des photographes.
-              </p>
-            </div>
-          </div>
-          <div class="row tight-width-whitespace portfolio-row">
-            <div class="col-sm-6">
-              <a
-                href="#"
-                data-lightbox="img/3.webp"
-                data-gallery-id="gallery-1"
-                data-caption="Création d'un site internet pour un voyageur"
-                data-frame="snapshot-lb"
-                ><img
-                  src="img/3.webp"
-                  class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
-              /></a>
-              <h2 class="mg-md text-center">
-                Création d'un site internet pour un voyageur
-              </h2>
-              <p class="text-center">
-                Nous avons élaboré un site internet et des illustrations pour
-                sublimer les vidéos et les articles de ce voyageur.
-              </p>
-            </div>
-            <div class="col-sm-6">
-              <a
-                href="#"
-                data-lightbox="img/4.webp"
-                data-gallery-id="gallery-1"
-                data-caption="Conception d'un site pour une agence de mariage"
-                data-frame="snapshot-lb"
-                ><img
-                  src="img/4.webp"
-                  class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
-              /></a>
-              <h2 class="mg-md text-center">
-                Conception d'un site pour une agence de mariage
-              </h2>
-              <p class="text-center">
-                Nous avons travaillé avec cette agence pour créer un site
-                internet permettant la présentation détaillée de leurs
-                prestations.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- bloc-4-portfolio END -->
+<!-- bloc-5-cta -->
+<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+	<div class="container bloc-lg">
+		<div class="row">
+			<h2 class="mg-md text-center tc-white">
+				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+			</h2>
+			<div class="col-sm-12 text-center">
+				<a href="lapanthere_web_design_lyon_contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
@@ -329,25 +238,25 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span>
+							<a class="social" href="lapanthere_web_design_lyon_index.html"><span class="fa fa-twitter icon-md"></span>
 								<span class="visuallyhidden">Twitter</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span>
+							<a class="social" href="lapanthere_web_design_lyon_index.html"><span class="fa fa-facebook icon-md"></span>
 								<span class="visuallyhidden">Facebook</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span>
+							<a class="social" href="lapanthere_web_design_lyon_index.html"><span class="fa fa-dribbble icon-md"></span>
 								<span class="visuallyhidden">Dribble</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span>
+							<a class="social" href="lapanthere_web_design_lyon_index.html"><span class="fa fa-instagram icon-md"></span>
 								<span class="visuallyhidden">Instagram</span></a>
 						</div>
 					</div>
@@ -359,20 +268,13 @@
 
 </div>
 <!-- Principal conteneur END -->
-<script src="./js/jquery-2.1.0.js" ></script>
-<script src="./js/bootstrap.min.js" ></script>
-<script src="./js/blocs.js" ></script>
-<script src="./js/jquery.touchSwipe.js" defer></script>
-<script src="./js/gmaps.min.js" ></script>
 
-    <script
-      src="https://code.jquery.com/jquery-2.1.0.min.js"
-      integrity="sha256-8oQ1OnzE2X9v4gpRVRMb1DWHoPHJilbur1LP9ykQ9H0="
-      crossorigin="anonymous"
-    ></script>
-    <script
+   <script src="./js/jquery-2.1.0.js" ></script>
+   <script src="./js/bootstrap.min.js" ></script>
+
+    <!-- <script
       *src*="<https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js>"
-    ></script>
+    ></script> -->
     <script src="./js/blocs.js"></script>
     <script src="./js/jquery.touchSwipe.js" defer></script>
     <script src="./js/gmaps.min.js"></script>
