--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="lapanthere_web_design_lyon_index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="La Panthère acceuil" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="La Panthère acceuil" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -42,7 +42,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="lapanthere_web_design_lyon_index.html">Accueil</a>
+						<a href="index.html">Accueil</a>
 					</li>
 					<li>
 					</li>
@@ -238,25 +238,25 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="lapanthere_web_design_lyon_index.html"><span class="fa fa-twitter icon-md"></span>
+							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span>
 								<span class="visuallyhidden">Twitter</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="lapanthere_web_design_lyon_index.html"><span class="fa fa-facebook icon-md"></span>
+							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span>
 								<span class="visuallyhidden">Facebook</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="lapanthere_web_design_lyon_index.html"><span class="fa fa-dribbble icon-md"></span>
+							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span>
 								<span class="visuallyhidden">Dribble</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="lapanthere_web_design_lyon_index.html"><span class="fa fa-instagram icon-md"></span>
+							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span>
 								<span class="visuallyhidden">Instagram</span></a>
 						</div>
 					</div>
