nouveaux tests defer et min pour optimisation

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" 
     ></script>
-    <script src="./js/blocs.js"></script>
+    <script src="./js/blocs.min.js"></script>
     <script src="./js/jquery.touchSwipe.min.js" defer></script>
     <script src="./js/gmaps.min.js" defer></script>
   </body>
