CDN pour Jquery, simplification de la classe visuallyHidden dans style.min.css

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" type="text/css" href="./css/font-awesome-pure.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
 
+	<link rel="preload" href="img/agence-la-panthere-monochrome.svg" as="image">
+	<link rel="preload" href="img/logo.webp" as="image">
 	<link rel="preload" href="img/agence-la-panthere.webp" as="image">
 
     <title>Entreprise de web design La Panthère à Lyon</title>
@@ -270,15 +272,10 @@
 
 </div>
 <!-- Principal conteneur END -->
-<script src="https://code.jquery.com/jquery-2.1.0.min.js" integrity="sha256-8oQ1OnzE2X9v4gpRVRMb1DWHoPHJilbur1LP9ykQ9H0=" crossorigin="anonymous"></script>
-   <!-- <script src="./js/jquery-2.1.0.min.js" ></script> -->
-   <!-- <script src="./js/bootstrap.min.js" ></script> -->
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" 
     ></script>
-    <script src="./js/blocs.min.js"></script>
-    <script src="./js/jquery.touchSwipe.min.js" defer></script>
-    <script src="./js/gmaps.min.js" defer></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js" defer></script>
   </body>
 </html>
