--- a/lapanthere_web_design_lyon_contact.html
+++ b/lapanthere_web_design_lyon_contact.html
@@ -167,7 +167,7 @@
 
 </div>
 <!-- Principal conteneur END -->
-<script src="https://code.jquery.com/jquery-2.1.0.min.js" integrity="sha256-8oQ1OnzE2X9v4gpRVRMb1DWHoPHJilbur1LP9ykQ9H0=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 <script
   src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" defer></script>
 <script src="./js/blocs.min.js" ></script>
